--- a/app/conponents/about/AboutStyle.css
+++ b/app/conponents/about/AboutStyle.css
@@ -1,6 +1,12 @@
 .aboutSection{
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
+    padding: 25px;
+}
+.about-container{
+    width: 100%;
+    height: 100%;
 }
 .about-img, .about-text{
     flex: 50%;
