--- a/app/conponents/home/HomeStyle.css
+++ b/app/conponents/home/HomeStyle.css
@@ -1,6 +1,7 @@
 .homeSection{
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto !important;
     background: rgb(0,196,204);
     background: linear-gradient(130deg, rgba(0,196,204,1) 0%, rgba(10,26,68,1) 91%);
     padding: 25px;
@@ -30,4 +31,21 @@ button{
     border-radius: 25px;
     background-color: #00c4cc;
     font-size: 25px;
+}
+
+@media (max-width: 767px) {
+    .homeSection{
+        position: relative;
+        width: 100%;
+        /* height: 100% !important; */
+        padding: 25px;
+    }
+    .herotext{
+        z-index: 9999;
+        color: black;
+    }
+    .hero-image{
+        position: absolute;
+        width: 400px;
+    }
 }
