--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 @layer base{
   body {
     @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+    
   }
 }
 .sctm-bg{
@@ -33,7 +34,12 @@ p{
   @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
 } */
 
-
+body{
+  width: auto !important;
+}
+.cstmindex{
+  position: static;
+}
 
 
 
